// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render test Swagger json 2.0 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 5px 5px 0 0;
}

.c0 > button {
  margin-left: 3px;
}

<div
    className="c0"
  >
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      Expand All
    </button>
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      Collapse All
    </button>
  </div>,
  .c0 > .swagger-ui .information-container.wrapper .info {
  margin: 0 !important;
}

<div
    className="c0"
  >
    <div
      className="swagger-ui"
    >
      <div>
        <svg
          style={
            Object {
              "height": 0,
              "position": "absolute",
              "width": 0,
            }
          }
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <symbol
              id="unlocked"
              viewBox="0 0 20 20"
            >
              <path
                d="M15.8 8H14V5.6C14 2.703 12.665 1 10 1 7.334 1 6 2.703 6 5.6V6h2v-.801C8 3.754 8.797 3 10 3c1.203 0 2 .754 2 2.199V8H4c-.553 0-1 .646-1 1.199V17c0 .549.428 1.139.951 1.307l1.197.387C5.672 18.861 6.55 19 7.1 19h5.8c.549 0 1.428-.139 1.951-.307l1.196-.387c.524-.167.953-.757.953-1.306V9.199C17 8.646 16.352 8 15.8 8z"
              />
            </symbol>
            <symbol
              id="locked"
              viewBox="0 0 20 20"
            >
              <path
                d="M15.8 8H14V5.6C14 2.703 12.665 1 10 1 7.334 1 6 2.703 6 5.6V8H4c-.553 0-1 .646-1 1.199V17c0 .549.428 1.139.951 1.307l1.197.387C5.672 18.861 6.55 19 7.1 19h5.8c.549 0 1.428-.139 1.951-.307l1.196-.387c.524-.167.953-.757.953-1.306V9.199C17 8.646 16.352 8 15.8 8zM12 8H8V5.199C8 3.754 8.797 3 10 3c1.203 0 2 .754 2 2.199V8z"
              />
            </symbol>
            <symbol
              id="close"
              viewBox="0 0 20 20"
            >
              <path
                d="M14.348 14.849c-.469.469-1.229.469-1.697 0L10 11.819l-2.651 3.029c-.469.469-1.229.469-1.697 0-.469-.469-.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-.469-.469-.469-1.228 0-1.697.469-.469 1.228-.469 1.697 0L10 8.183l2.651-3.031c.469-.469 1.228-.469 1.697 0 .469.469.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c.469.469.469 1.229 0 1.698z"
              />
            </symbol>
            <symbol
              id="large-arrow"
              viewBox="0 0 20 20"
            >
              <path
                d="M13.25 10L6.109 2.58c-.268-.27-.268-.707 0-.979.268-.27.701-.27.969 0l7.83 7.908c.268.271.268.709 0 .979l-7.83 7.908c-.268.271-.701.27-.969 0-.268-.269-.268-.707 0-.979L13.25 10z"
              />
            </symbol>
            <symbol
              id="large-arrow-down"
              viewBox="0 0 20 20"
            >
              <path
                d="M17.418 6.109c.272-.268.709-.268.979 0s.271.701 0 .969l-7.908 7.83c-.27.268-.707.268-.979 0l-7.908-7.83c-.27-.268-.27-.701 0-.969.271-.268.709-.268.979 0L10 13.25l7.418-7.141z"
              />
            </symbol>
            <symbol
              id="jump-to"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 7v4H5.83l3.58-3.59L8 6l-6 6 6 6 1.41-1.41L5.83 13H21V7z"
              />
            </symbol>
            <symbol
              id="expand"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
              />
            </symbol>
          </defs>
        </svg>
      </div>
      <div>
        <div
          className="information-container wrapper"
        >
          <section
            className="block col-12"
            style={
              Object {
                "display": null,
              }
            }
          >
            <div>
              <div
                className="info"
              >
                <hgroup
                  className="main"
                >
                  <h2
                    className="title"
                  >
                    Swagger Petstore
                    <small>
                      <pre
                        className="version"
                      >
                         
                        1.0.0
                         
                      </pre>
                    </small>
                  </h2>
                  <pre
                    className="base-url"
                  >
                    [ Base URL: 
                    petstore.swagger.io
                    /api
                     ]
                  </pre>
                  
                </hgroup>
                <div
                  className="description"
                >
                  <div
                    className="markdown"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "<p>A sample API that uses a petstore as an example to demonstrate features in the swagger-2.0 specification</p>
",
                      }
                    }
                  />
                </div>
                <div
                  className="info__tos"
                >
                  <a
                    className="link"
                    href="http://swagger.io/terms/"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Terms of service
                  </a>
                </div>
                <div
                  className="info__contact"
                />
                <div
                  className="info__license"
                >
                  <span>
                    MIT
                  </span>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          className="scheme-container"
        >
          <section
            className="schemes wrapper block col-12"
            style={
              Object {
                "display": null,
              }
            }
          >
            <label
              htmlFor="schemes"
            >
              <span
                className="schemes-title"
              >
                Schemes
              </span>
              <select
                onChange={[Function]}
                value="http"
              >
                <option
                  value="http"
                >
                  http
                </option>
              </select>
            </label>
          </section>
        </div>
        <div />
        <div
          className="wrapper"
        >
          <section
            className="block col-12 block-desktop col-12-desktop"
            style={
              Object {
                "display": null,
              }
            }
          >
            <div>
              <span>
                <div
                  className="opblock-tag-section"
                >
                  <h4
                    className="opblock-tag no-desc"
                    data-is-open={false}
                    data-tag="default"
                    id="operations-tag-default"
                    onClick={[Function]}
                  >
                    <a
                      className="nostyle"
                      href={null}
                      onClick={null}
                    >
                      <span>
                        default
                      </span>
                    </a>
                    <small />
                    <div />
                    <button
                      className="expand-operation"
                      onClick={[Function]}
                      title="Expand operation"
                    >
                      <svg
                        className="arrow"
                        height="20"
                        width="20"
                      >
                        <use
                          href="#large-arrow"
                          xlinkHref="#large-arrow"
                        />
                      </svg>
                    </button>
                  </h4>
                  <noscript />
                </div>
              </span>
            </div>
          </section>
        </div>
        <div
          className="wrapper"
        >
          <section
            className="block col-12 block-desktop col-12-desktop"
            style={
              Object {
                "display": null,
              }
            }
          >
            <section
              className="models is-open"
            >
              <h4
                onClick={[Function]}
              >
                <span>
                  Models
                </span>
                <svg
                  height="20"
                  width="20"
                >
                  <use
                    xlinkHref="#large-arrow-down"
                  />
                </svg>
              </h4>
              <div
                style={
                  Object {
                    "border": "none",
                    "height": "auto",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                 
                <div
                  className="model-container"
                  id="model-Pet"
                >
                  <span
                    className="models-jump-to-path"
                  />
                  <span
                    className="model-box"
                  >
                    <span
                      onClick={[Function]}
                      style={
                        Object {
                          "cursor": "pointer",
                        }
                      }
                    >
                      <span
                        className="model-box"
                      >
                        <span
                          className="model model-title"
                        >
                          Pet
                        </span>
                      </span>
                    </span>
                    <span
                      onClick={[Function]}
                      style={
                        Object {
                          "cursor": "pointer",
                        }
                      }
                    >
                      <span
                        className="model-toggle collapsed"
                      />
                    </span>
                     
                  </span>
                </div>
                <div
                  className="model-container"
                  id="model-NewPet"
                >
                  <span
                    className="models-jump-to-path"
                  />
                  <span
                    className="model-box"
                  >
                    <span
                      onClick={[Function]}
                      style={
                        Object {
                          "cursor": "pointer",
                        }
                      }
                    >
                      <span
                        className="model-box"
                      >
                        <span
                          className="model model-title"
                        >
                          NewPet
                        </span>
                      </span>
                    </span>
                    <span
                      onClick={[Function]}
                      style={
                        Object {
                          "cursor": "pointer",
                        }
                      }
                    >
                      <span
                        className="model-toggle collapsed"
                      />
                    </span>
                     
                  </span>
                </div>
                <div
                  className="model-container"
                  id="model-ErrorModel"
                >
                  <span
                    className="models-jump-to-path"
                  />
                  <span
                    className="model-box"
                  >
                    <span
                      onClick={[Function]}
                      style={
                        Object {
                          "cursor": "pointer",
                        }
                      }
                    >
                      <span
                        className="model-box"
                      >
                        <span
                          className="model model-title"
                        >
                          ErrorModel
                        </span>
                      </span>
                    </span>
                    <span
                      onClick={[Function]}
                      style={
                        Object {
                          "cursor": "pointer",
                        }
                      }
                    >
                      <span
                        className="model-toggle collapsed"
                      />
                    </span>
                     
                  </span>
                </div>
                 
              </div>
            </section>
          </section>
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 0 5px 5px 0;
}

.c0 > button {
  margin-left: 3px;
}

<div
    className="c0"
  >
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      Expand All
    </button>
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      Collapse All
    </button>
  </div>,
]
`;

exports[`Render test Swagger yaml 2.0 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 5px 5px 0 0;
}

.c0 > button {
  margin-left: 3px;
}

<div
    className="c0"
  >
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      Expand All
    </button>
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      Collapse All
    </button>
  </div>,
  .c0 > .swagger-ui .information-container.wrapper .info {
  margin: 0 !important;
}

<div
    className="c0"
  >
    <div
      className="swagger-ui"
    >
      <div>
        <svg
          style={
            Object {
              "height": 0,
              "position": "absolute",
              "width": 0,
            }
          }
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <symbol
              id="unlocked"
              viewBox="0 0 20 20"
            >
              <path
                d="M15.8 8H14V5.6C14 2.703 12.665 1 10 1 7.334 1 6 2.703 6 5.6V6h2v-.801C8 3.754 8.797 3 10 3c1.203 0 2 .754 2 2.199V8H4c-.553 0-1 .646-1 1.199V17c0 .549.428 1.139.951 1.307l1.197.387C5.672 18.861 6.55 19 7.1 19h5.8c.549 0 1.428-.139 1.951-.307l1.196-.387c.524-.167.953-.757.953-1.306V9.199C17 8.646 16.352 8 15.8 8z"
              />
            </symbol>
            <symbol
              id="locked"
              viewBox="0 0 20 20"
            >
              <path
                d="M15.8 8H14V5.6C14 2.703 12.665 1 10 1 7.334 1 6 2.703 6 5.6V8H4c-.553 0-1 .646-1 1.199V17c0 .549.428 1.139.951 1.307l1.197.387C5.672 18.861 6.55 19 7.1 19h5.8c.549 0 1.428-.139 1.951-.307l1.196-.387c.524-.167.953-.757.953-1.306V9.199C17 8.646 16.352 8 15.8 8zM12 8H8V5.199C8 3.754 8.797 3 10 3c1.203 0 2 .754 2 2.199V8z"
              />
            </symbol>
            <symbol
              id="close"
              viewBox="0 0 20 20"
            >
              <path
                d="M14.348 14.849c-.469.469-1.229.469-1.697 0L10 11.819l-2.651 3.029c-.469.469-1.229.469-1.697 0-.469-.469-.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-.469-.469-.469-1.228 0-1.697.469-.469 1.228-.469 1.697 0L10 8.183l2.651-3.031c.469-.469 1.228-.469 1.697 0 .469.469.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c.469.469.469 1.229 0 1.698z"
              />
            </symbol>
            <symbol
              id="large-arrow"
              viewBox="0 0 20 20"
            >
              <path
                d="M13.25 10L6.109 2.58c-.268-.27-.268-.707 0-.979.268-.27.701-.27.969 0l7.83 7.908c.268.271.268.709 0 .979l-7.83 7.908c-.268.271-.701.27-.969 0-.268-.269-.268-.707 0-.979L13.25 10z"
              />
            </symbol>
            <symbol
              id="large-arrow-down"
              viewBox="0 0 20 20"
            >
              <path
                d="M17.418 6.109c.272-.268.709-.268.979 0s.271.701 0 .969l-7.908 7.83c-.27.268-.707.268-.979 0l-7.908-7.83c-.27-.268-.27-.701 0-.969.271-.268.709-.268.979 0L10 13.25l7.418-7.141z"
              />
            </symbol>
            <symbol
              id="jump-to"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 7v4H5.83l3.58-3.59L8 6l-6 6 6 6 1.41-1.41L5.83 13H21V7z"
              />
            </symbol>
            <symbol
              id="expand"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
              />
            </symbol>
          </defs>
        </svg>
      </div>
      <div>
        <div
          className="information-container wrapper"
        >
          <section
            className="block col-12"
            style={
              Object {
                "display": null,
              }
            }
          >
            <div>
              <div
                className="info"
              >
                <hgroup
                  className="main"
                >
                  <h2
                    className="title"
                  >
                    Simple API overview
                    <small>
                      <pre
                        className="version"
                      >
                         
                        v2
                         
                      </pre>
                    </small>
                  </h2>
                  
                </hgroup>
                <div
                  className="description"
                />
              </div>
            </div>
          </section>
        </div>
        <div />
        <div
          className="wrapper"
        >
          <section
            className="block col-12 block-desktop col-12-desktop"
            style={
              Object {
                "display": null,
              }
            }
          >
            <div>
              <span>
                <div
                  className="opblock-tag-section"
                >
                  <h4
                    className="opblock-tag no-desc"
                    data-is-open={false}
                    data-tag="default"
                    id="operations-tag-default"
                    onClick={[Function]}
                  >
                    <a
                      className="nostyle"
                      href={null}
                      onClick={null}
                    >
                      <span>
                        default
                      </span>
                    </a>
                    <small />
                    <div />
                    <button
                      className="expand-operation"
                      onClick={[Function]}
                      title="Expand operation"
                    >
                      <svg
                        className="arrow"
                        height="20"
                        width="20"
                      >
                        <use
                          href="#large-arrow"
                          xlinkHref="#large-arrow"
                        />
                      </svg>
                    </button>
                  </h4>
                  <noscript />
                </div>
              </span>
            </div>
          </section>
        </div>
        <div
          className="wrapper"
        >
          <section
            className="block col-12 block-desktop col-12-desktop"
            style={
              Object {
                "display": null,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 0 5px 5px 0;
}

.c0 > button {
  margin-left: 3px;
}

<div
    className="c0"
  >
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      Expand All
    </button>
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      Collapse All
    </button>
  </div>,
]
`;

exports[`Render test Swagger yaml 3.0 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 5px 5px 0 0;
}

.c0 > button {
  margin-left: 3px;
}

<div
    className="c0"
  >
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      Expand All
    </button>
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      Collapse All
    </button>
  </div>,
  .c0 > .swagger-ui .information-container.wrapper .info {
  margin: 0 !important;
}

<div
    className="c0"
  >
    <div
      className="swagger-ui"
    >
      <div>
        <svg
          style={
            Object {
              "height": 0,
              "position": "absolute",
              "width": 0,
            }
          }
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <symbol
              id="unlocked"
              viewBox="0 0 20 20"
            >
              <path
                d="M15.8 8H14V5.6C14 2.703 12.665 1 10 1 7.334 1 6 2.703 6 5.6V6h2v-.801C8 3.754 8.797 3 10 3c1.203 0 2 .754 2 2.199V8H4c-.553 0-1 .646-1 1.199V17c0 .549.428 1.139.951 1.307l1.197.387C5.672 18.861 6.55 19 7.1 19h5.8c.549 0 1.428-.139 1.951-.307l1.196-.387c.524-.167.953-.757.953-1.306V9.199C17 8.646 16.352 8 15.8 8z"
              />
            </symbol>
            <symbol
              id="locked"
              viewBox="0 0 20 20"
            >
              <path
                d="M15.8 8H14V5.6C14 2.703 12.665 1 10 1 7.334 1 6 2.703 6 5.6V8H4c-.553 0-1 .646-1 1.199V17c0 .549.428 1.139.951 1.307l1.197.387C5.672 18.861 6.55 19 7.1 19h5.8c.549 0 1.428-.139 1.951-.307l1.196-.387c.524-.167.953-.757.953-1.306V9.199C17 8.646 16.352 8 15.8 8zM12 8H8V5.199C8 3.754 8.797 3 10 3c1.203 0 2 .754 2 2.199V8z"
              />
            </symbol>
            <symbol
              id="close"
              viewBox="0 0 20 20"
            >
              <path
                d="M14.348 14.849c-.469.469-1.229.469-1.697 0L10 11.819l-2.651 3.029c-.469.469-1.229.469-1.697 0-.469-.469-.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-.469-.469-.469-1.228 0-1.697.469-.469 1.228-.469 1.697 0L10 8.183l2.651-3.031c.469-.469 1.228-.469 1.697 0 .469.469.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c.469.469.469 1.229 0 1.698z"
              />
            </symbol>
            <symbol
              id="large-arrow"
              viewBox="0 0 20 20"
            >
              <path
                d="M13.25 10L6.109 2.58c-.268-.27-.268-.707 0-.979.268-.27.701-.27.969 0l7.83 7.908c.268.271.268.709 0 .979l-7.83 7.908c-.268.271-.701.27-.969 0-.268-.269-.268-.707 0-.979L13.25 10z"
              />
            </symbol>
            <symbol
              id="large-arrow-down"
              viewBox="0 0 20 20"
            >
              <path
                d="M17.418 6.109c.272-.268.709-.268.979 0s.271.701 0 .969l-7.908 7.83c-.27.268-.707.268-.979 0l-7.908-7.83c-.27-.268-.27-.701 0-.969.271-.268.709-.268.979 0L10 13.25l7.418-7.141z"
              />
            </symbol>
            <symbol
              id="jump-to"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 7v4H5.83l3.58-3.59L8 6l-6 6 6 6 1.41-1.41L5.83 13H21V7z"
              />
            </symbol>
            <symbol
              id="expand"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
              />
            </symbol>
          </defs>
        </svg>
      </div>
      <div>
        <div
          className="information-container wrapper"
        >
          <section
            className="block col-12"
            style={
              Object {
                "display": null,
              }
            }
          >
            <div>
              <div
                className="info"
              >
                <hgroup
                  className="main"
                >
                  <h2
                    className="title"
                  >
                    Callback Example
                    <span>
                      <small>
                        <pre
                          className="version"
                        >
                           
                          1.0.0
                           
                        </pre>
                      </small>
                      <small
                        style={
                          Object {
                            "backgroundColor": "#89bf04",
                          }
                        }
                      >
                        <pre
                          className="version"
                        >
                          OAS3
                        </pre>
                      </small>
                    </span>
                  </h2>
                  
                </hgroup>
                <div
                  className="description"
                />
              </div>
            </div>
          </section>
        </div>
        <div />
        <div
          className="wrapper"
        >
          <section
            className="block col-12 block-desktop col-12-desktop"
            style={
              Object {
                "display": null,
              }
            }
          >
            <div>
              <span>
                <div
                  className="opblock-tag-section"
                >
                  <h4
                    className="opblock-tag no-desc"
                    data-is-open={false}
                    data-tag="default"
                    id="operations-tag-default"
                    onClick={[Function]}
                  >
                    <a
                      className="nostyle"
                      href={null}
                      onClick={null}
                    >
                      <span>
                        default
                      </span>
                    </a>
                    <small />
                    <div />
                    <button
                      className="expand-operation"
                      onClick={[Function]}
                      title="Expand operation"
                    >
                      <svg
                        className="arrow"
                        height="20"
                        width="20"
                      >
                        <use
                          href="#large-arrow"
                          xlinkHref="#large-arrow"
                        />
                      </svg>
                    </button>
                  </h4>
                  <noscript />
                </div>
              </span>
            </div>
          </section>
        </div>
        <div
          className="wrapper"
        >
          <section
            className="block col-12 block-desktop col-12-desktop"
            style={
              Object {
                "display": null,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 0 5px 5px 0;
}

.c0 > button {
  margin-left: 3px;
}

<div
    className="c0"
  >
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      Expand All
    </button>
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      Collapse All
    </button>
  </div>,
]
`;

exports[`Render test invalid swagger 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 5px 5px 0 0;
}

.c0 > button {
  margin-left: 3px;
}

<div
    className="c0"
  >
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      Expand All
    </button>
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      Collapse All
    </button>
  </div>,
  .c0 > .swagger-ui .information-container.wrapper .info {
  margin: 0 !important;
}

<div
    className="c0"
  >
    <div
      className="swagger-ui"
    >
      <div
        className="loading-container"
      >
        <h4>
          No API definition provided.
        </h4>
      </div>
    </div>
  </div>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 0 5px 5px 0;
}

.c0 > button {
  margin-left: 3px;
}

<div
    className="c0"
  >
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      Expand All
    </button>
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      Collapse All
    </button>
  </div>,
]
`;

exports[`Shallow render test shallow render and snapshot 1`] = `
<React.Fragment>
  <styled.div>
    <Button
      onClick={[Function]}
    >
      Expand All
    </Button>
    <Button
      onClick={[Function]}
    >
      Collapse All
    </Button>
  </styled.div>
  <styled.div>
    <SwaggerUI
      spec=""
    />
  </styled.div>
  <styled.div>
    <Button
      onClick={[Function]}
    >
      Expand All
    </Button>
    <Button
      onClick={[Function]}
    >
      Collapse All
    </Button>
  </styled.div>
</React.Fragment>
`;
